testData/diagnostics/div64_by_minus_one_vm.diag.txt
testData/diagnostics/div64_by_minus_one_vm.nut line = (1) column = (11) : error: too many digits for an Hex number
local x = -0x7FFFFFFFFFFFFFFF - 1
           ^-----------------
local y = @(a) -a

